- Alteração da rota do professor, entidade professor funcionando
