# backend/routes/professorRoutes.js
@@ -1,11 +1,11 @@
 const express = require('express');
 const router = express.Router();
-const professorController = require('../controllers/professorController');
+const professorController = require('../controllers/professorController'); // Caminho correto para o controlador
 
-router.post('/professor', professorController.registerProfessor);
-router.get('/professor', professorController.getProfessor);
-router.get('/professor/:id', professorController.getProfessorById);
-router.put('/professor/:id', professorController.updateProfessor);
-router.delete('/professor/:id', professorController.deleteProfessor);
+router.post('/professores', professorController.registerProfessor);
+router.get('/professores', professorController.getProfessor);
+router.get('/professores/:id', professorController.getProfessorById);
+router.put('/professores/:id', professorController.updateProfessor);
+router.delete('/professores/:id', professorController.deleteProfessor);
 
 module.exports = router;
